--- a/config.toml
+++ b/config.toml
@@ -35,6 +35,6 @@ title = "Evans Ng'eno · My Website"
   [params.contact]
     github = "https://github.com/Snavens"
     instagram = "https://instagram.com/apparently_evans"
-    twitter = "https://twitter.com/EvansN21?s=08"
+    twitter = "https://twitter.com/snavens_spence?s=09"
     telegram = "https://t.me/predatore21"
     whatsapp = "http://wa.me/+254727897736"
